# MEPHI_01

./: 05a_05b.c  start.txt
IMP_C++_works/: CMakeLists.txt  ex01a.px  ex01b.px  ex01c.px  ex01d.px  ex02a.px  ex02aMOD.c  ex02b.c  ex02b.px  ex03a.c  ex03a.px  ex03b.c  ex03b.px  ex04a.c  ex04a.px  ex04b.c  ex04b.px  ex04c.c  ex05a.c  ex05a.px  ex05b.c  ex05b.px  ex05c.c  ex05c.px  ex06a.c  ex06a.px  ex06b.c  ex06b.px  ex06c.c  ex06c.px  ex07a.c  ex07a.px  ex07b.c  ex08a.px  ex08b.px  ex09a.px  ex09b.px  ex10a.px  ex11a.c  ex11a.p00  (+49 more)
OOP_Py/: 11.2.1.py  11.2.2.py  TEST - Life, the Universe, and Everything.py  convex_modified.rar  modules.xml  real.py  techno.py  testing_for_convex.py  workspace.xml
OOP_Py/SHADOW/polyedr/: run_noshadow.py
OOP_Py/SHADOW/polyedr/common/: r3.py
OOP_Py/SHADOW/polyedr/data/: box.geom
OOP_Py/SHADOW/polyedr/noshadow/: polyedr.py
OOP_Py/SIZECON/: sizecon.py
OOP_Py/convex/: convex.py  run_convex.py  run_tk_convex.py
OOP_Py/convex/tests/: test_convex.py
OOP_Py/convex_modified/: README.html  README.md  convex.py  deq.py  r2point.py  run_convex.py  run_tk_convex.py  support.py  tk_drawer.py
OOP_Py/convex_modified/tests/: test_convex.py  test_r2point.py
OOP_Py/hmwrks/: 2.1.txt  2.2.txt  2.3.txt  3.1.py  HW1.py  dz.py  fff.py  hw_6_1_2.py  hw_6_1_4.py  hw_6_1_4_test.py  kaa120_hw01.py  kaa120_hw02.py  print_sys.py  qq2.out  test.py
OOP_Py/polyedr-20191221T113959Z-001/polyedr/: my_test.py  run_shadow.py
OOP_Py/polyedr-20191221T113959Z-001/polyedr/common/: r3.py
OOP_Py/polyedr_shadow/polyedr/: run_shadow.py
(+22 files in other folders)
