cmake_minimum_required(VERSION 3.15)
project(IMP_C___works C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(IMP_C___works
        ax01a.c
        ex01a.c
        ex01b.c
        ex01c.c
        ex01d.c
        ex02a.c
        ex02aMOD.c
        ex02b.c
        ex03a.c
        ex03b.c
        ex04a.c
        ex04b.c
        ex05a.c
        ex05b.c
        ex05c.c
        ex06a.c
        ex06b.c
        ex06c.c
        ex07a.c
        ex08a.c
        ex08b.c
        ex09a.c
        ex09b.c
        ex10a.c
        ex11a.c
        ex11b.c
        ex12a.c
        ex13a.c
        ex13b.c
        ex14a.c
        ex14b.c
        ex15a.c
        ex16a.c
        ex17a.c
        mycom.c
        mycom.h
        myio.c
        myio.h
        mynet.c
        mynet.h
        myprog.c
        myprog.h
        myrand.c
        myrand.h)
